tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__RocketTier7-AAAAAAAAAAAAAAAAAAAKUg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2642,
  "prerequisites": [
    2705,
    2706,
    2707,
    2702,
    2703
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can now visit the planets on the edge of the solar system with this rocket.\n\nYou need to use H8N4C2O4 (Green) Rocket Fuel to fuel it.\n\n[note]In case you forgot to complete any, holding the rocket in your hand will unlock all pre-requisite quests in addition to this one.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Rocket Tier 7",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2705,
    2706,
    2707,
    2702,
    2703
  ],
  "rewards": [],
  "tasks": []
}
