tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__SeriousUpgrades-AAAAAAAAAAAAAAAAAAAKhw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2695,
  "prerequisites": [
    2610
  ],
  "properties": {
    "auto_claim": false,
    "desc": "So if you thought 'hey, the purple stuff wasn't that bad, why not make the green?', well, first of all, you may need professional help. Second, you're going to need to be in ZPM to make the casings you need, full stop. You need a ZPM ABS for the components, so come back once you've made a ZPM Energy Hatch.\n\nYou can probably figure most of it out on your own, but keep in mind that some of the materials need to be created in the ABS, solidified, macerated, and then used in another ABS recipe. The examples here are Hastelloy-N for Lafium Compound and, Rhenium for Laurenium. Rhenium itself is made with a nonstandard ABS recipe. You also need Dysprosium which requires either making Rare Earth (III) or going to the Toxic Everglades. You'll also need either Rare Earth (II) or Rare Earth (III) for Ytterbium unless, again, you visit the Everglades for it. [warn]The Everglades ore veins might be very hard to find, due to their rarity.[/warn] You could also get Ytterbium from Almandine Ore if you are willing to try GT++ Milling and Froth Flotation.\n\nHave fun with that!\n\n[note]You'll almost certainly need more than this, but the exact amount, as always, depends on your hatches and buses.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lSerious Upgrades",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2610
  ],
  "rewards": [],
  "tasks": []
}
