tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__Slimeling-AAAAAAAAAAAAAAAAAAAFvw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1471,
  "prerequisites": [
    1429
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Slimeling is a utility mob that spawns from Slimeling Eggs found on the surface of Mars. It shares some features from vanilla wolves and mules: it can be tamed and attacks mobs that threaten its owners, and can be equipped with a special chest to transport items.\n\nAs an allied mob, Slimelings will actively help and follow the player-owner and will attempt to protect them. They can also have a neutral behavior, that is, they can attack if provoked or hurt by non-owners.\n\nItems that you can feed Slimelings with:\n\nBoat\nCooked fish\nGunpowder\nGold ingot\nRedstone repeater\nWooden door\n\nSlimelings can be equipped by their owners with a Slimeling Inventory Bag to transport items.\n\nTo complete this quest get any one of the eggs - note you may need a Heavy Duty Pickaxe.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Slimeling",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1429
  ],
  "rewards": [],
  "tasks": []
}
