tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__SpacePumping-AAAAAAAAAAAAAAAAAAAL3Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3037,
  "prerequisites": [
    1067,
    1535
  ],
  "properties": {
    "auto_claim": false,
    "desc": "At some point you may have wondered: There are these enormous gas planets in the solar system - could there be a way to \"harvest\" them? Indeed there is. By constructing the \"Planetary Gas Siphon\" multiblock, you are able to pump from the infinite supply of gas found on Jupiter, Saturn, Uranus, and Neptune. You just need to build a space station around a gas planet to get close enough to reach the gas without falling into it.\n\nDifferent gases can be extracted by pumping at different depths which is controlled by a Programmed Circuit. You need to supply (64 * depth) Mining Pipes to reach the selected depth.\n\nWhile operational, the multiblock needs d*4^(T+2) EU/t where T is the tier of the space station and d is the depth.\n\nYou can find an overview of what you can pump and where in the Tips and Tricks chapter.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Space Pumping",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1067,
    1535
  ],
  "rewards": [],
  "tasks": []
}
