tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__SpaceStation-AAAAAAAAAAAAAAAAAAAEKw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1067,
  "prerequisites": [
    810
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can build a space station if you want. You can add up to four spin thrusters to your station to rotate it.\n\nDays on space stations last longer than on the overworld, so you can generate more solar power.\n\n§oYou can build space stations here:§r\n§21§r. Moon - §9T1\n§22§r. Mars - §9T2\n§23§r. Jupiter - §9T3\n§24§r. Venus - §9T4\n§25§r. Saturn - §9T5\n§26§r. Uranus - §9T5\n§27§r. Neptune - §9T6§r\n\nEach §2Retrieval Task§r in this quest corresponds (in order) to the resources you will need in order to §2build a space station§r at one of the planets listed above. The \"§9T#§r\" afterwards refers to the §9tier of rocket§r you will need to get there.\n\n[note]You will need to complete at least one task to complete this quest![/note]\n\n[warn]It is likely that you will loose your rocket when flying back to earth or another space station. Make sure you have an alternative way to return (some form of teleportation) or use another planet/moon as proxy (if you get an error while doing so, you spawn on the planet/moon and can launch your rocket again).[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Space Station",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    810
  ],
  "rewards": [],
  "tasks": []
}
