tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__SpaceTorches-AAAAAAAAAAAAAAAAAAAFoQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1441,
  "prerequisites": [
    1445
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Normal torches won't work in space, only in the area within the oxygen bubble.\n\nOne solution is glowstone torches. You can also use other mods' lights and lamps. You'll probably want 3-5 stacks for mining veins, unless you just use a singleblock or multiblock miner.\n\nAnother option is to use nightvision and a magnum torch or GregTech monster repellator to keep mobs away. These do not work on the official servers, instead claim and unclaim chunks.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Space Torches",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1445
  ],
  "rewards": [],
  "tasks": []
}
